added initial content for main character on instructions page

--- a/public/stylesheets/instructions.css
+++ b/public/stylesheets/instructions.css
@@ -38,6 +38,7 @@ body {
     grid-template-columns: 60% 40%;
     grid-template-rows: 100%;
     height: 100vh;
+    background-position-y: center;
 }
 
 #swiftfell-lore-left {
