--- a/views/game/instructions.ejs
+++ b/views/game/instructions.ejs
@@ -79,9 +79,14 @@
                 <div class="media">
                     <img class="align-self-start mr-3" src="/images/hero-face.png" alt="Generic placeholder image">
                     <div class="media-body">
-                        <h5 class="mt-0">(Hero)</h5>
-                        <p>(place holder description 1)</p>
-                        <p>(Second text place holder area)</p>
+                        <h3 class="mt-0"><b>Brindle</b></h3>
+                        <p>Ambitious, brave, and a bit forgetful, Brindle has spent most of his life preparing to earn the title of Hero from the Swiftfell Hero's Academy. He is in his last year and is preparing to take the Hero's Exam any day now. Son of the legendary Hero, Agin, enjoys slaying monsters and the idea of adventuring across the world more than protecting the people of Sundirra Realm.</p>
+                        <ul>
+                            <li>Class: Hero</li>
+                            <li>Weapon Type: Short Swords</li>
+                            <li>Magic: Lightning-based</li>
+                            <li>Special: Ki-based</li>
+                        </ul>
                     </div>
                 </div>
                 <br><br><br>
@@ -90,48 +95,13 @@
                     <img class="align-self-start mr-3" src="/images/sheryl-face.png" alt="Generic placeholder image">
                     <div class="media-body">
                         <h5 class="mt-0">Sheryl</h5>
-                        <p>(place holder description 1)</p>
-                        <p>(Second text place holder area)</p>
-                    </div>
-                </div>
-                <br><br><br>
-
-                <div class="media">
-                    <img class="align-self-start mr-3" src="/images/janna-face.png" alt="Generic placeholder image">
-                    <div class="media-body">
-                        <h5 class="mt-0">Janna</h5>
-                        <p>(place holder description 1)</p>
-                        <p>(Second text place holder area)</p>
-                    </div>
-                </div>
-                <br><br><br>
-
-                <div class="media">
-                    <img class="align-self-start mr-3" src="/images/megan-face.png" alt="Generic placeholder image">
-                    <div class="media-body">
-                        <h5 class="mt-0">Megan</h5>
-                        <p>(place holder description 1)</p>
-                        <p>(Second text place holder area)</p>
-                    </div>
-                </div>
-                <br><br><br>
-
-                <div class="media">
-                    <img class="align-self-start mr-3" src="/images/master-face.png" alt="Generic placeholder image">
-                    <div class="media-body">
-                        <h5 class="mt-0">Master</h5>
-                        <p>(place holder description 1)</p>
-                        <p>(Second text place holder area)</p>
-                    </div>
-                </div>
-                <br><br><br>
-
-                <div class="media">
-                    <img class="align-self-start mr-3" src="/images/soren-face.png" alt="Generic placeholder image">
-                    <div class="media-body">
-                        <h5 class="mt-0">Soren</h5>
-                        <p>(place holder description 1)</p>
-                        <p>(Second text place holder area)</p>
+                        <p>Head-strong, courageous, and quick to anger, Sheryl, too, is in her final year at the Hero's Academy. A roaming band of monsters killed her parents at a young age. She vowed that no one else should have to endure the pain she did, prompting Sheryl to seek training under famed Hero, Master.</p>
+                        <ul>
+                            <li>Class: Warrior</li>
+                            <li>Weapon Type: Broad Swords</li>
+                            <li>Magic: None</li>
+                            <li>Special: Berserker/Damage-based</li>
+                        </ul>
                     </div>
                 </div>
                 <br><br><br>
@@ -141,17 +111,87 @@
                     <div class="media-body">
                         <h5 class="mt-0">Jager</h5>
                         <p>(place holder description 1)</p>
-                        <p>(Second text place holder area)</p>
+                        <ul>
+                            <li>Class: Priest</li>
+                            <li>Weapon Type: Crossbows</li>
+                            <li>Magic: Healing-based</li>
+                            <li>Special: Status-based</li>
+                        </ul>
                     </div>
                 </div>
                 <br><br><br>
-
+                
                 <div class="media">
                     <img class="align-self-start mr-3" src="/images/gale-face.png" alt="Generic placeholder image">
                     <div class="media-body">
                         <h5 class="mt-0">Gale</h5>
                         <p>(place holder description 1)</p>
-                        <p>(Second text place holder area)</p>
+                        <ul>
+                            <li>Class: Mage</li>
+                            <li>Weapon Type: Canes</li>
+                            <li>Magic: Elemental-based</li>
+                            <li>Special: Chaos-based</li>
+                        </ul>
+                    </div>
+                </div>
+                <br><br><br>
+
+                <div class="media">
+                    <img class="align-self-start mr-3" src="/images/janna-face.png" alt="Generic placeholder image">
+                    <div class="media-body">
+                        <h5 class="mt-0">Janna</h5>
+                        <p>(place holder description 1)</p>
+                        <ul>
+                            <li>Occupation: Homemaker</li>
+                            <li>Hobbies: Knitting and gardening</li>
+                            <li>Noted For: Voted best cook in Swiftfell Village three-years running</li>
+                            <li>"A house is made from wood and beams. A home is made from love and dreams."</li>
+                        </ul>
+                    </div>
+                </div>
+                <br><br><br>
+
+                <div class="media">
+                    <img class="align-self-start mr-3" src="/images/megan-face.png" alt="Generic placeholder image">
+                    <div class="media-body">
+                        <h5 class="mt-0">Megan</h5>
+                        <p>(place holder description 1)</p>
+                        <ul>
+                            <li>Occupation: None</li>
+                            <li>Hobbies: Aiding injured farm animals and pets</li>
+                            <li>Noted For: </li>
+                            <li>""</li>
+                        </ul>
+                    </div>
+                </div>
+                <br><br><br>
+
+                <div class="media">
+                    <img class="align-self-start mr-3" src="/images/master-face.png" alt="Generic placeholder image">
+                    <div class="media-body">
+                        <h5 class="mt-0">Master</h5>
+                        <p>(place holder description 1)</p>
+                        <ul>
+                            <li>Occupation: Head Instructor at the Swiftfell Hero's Academy</li>
+                            <li>Hobbies: Maintaining the documentation of the history of Swiftfell and local historian</li>
+                            <li>Noted For: Trained along side Agin at the Hero's Academy</li>
+                            <li>"Amateurs train until they get it right. Heroes train until they can't get it wrong."</li>
+                        </ul>
+                    </div>
+                </div>
+                <br><br><br>
+
+                <div class="media">
+                    <img class="align-self-start mr-3" src="/images/soren-face.png" alt="Generic placeholder image">
+                    <div class="media-body">
+                        <h5 class="mt-0">Soren</h5>
+                        <p>(place holder description 1)</p>
+                        <ul>
+                            <li>Occupation: ???</li>
+                            <li>Hobbies: ???</li>
+                            <li>Noted For: ???</li>
+                            <li>"Power is the only universal constant."</li>
+                        </ul>
                     </div>
                 </div>
                 <br><br><br>
