--- a/public/stylesheets/instructions.css
+++ b/public/stylesheets/instructions.css
@@ -115,6 +115,23 @@ body {
 
 #main-characters {
     display: grid;
+    height: 215vh;
+    background-image: url('/images/basic-bg2.png');
+    background-size: cover;
+    background-position: center;
+    grid-template-columns: 20% 60% 20%;
+    grid-template-rows: 100%;
+}
+
+#main-characters-center {
+    display: flex;
+    flex-direction: column;
+    grid-area: 1 / 2 / span 1 / span 1;
+    align-items: center;
+}
+
+#main-characters-bottom {
+    display: grid;
     height: 300vh;
     background-image: url('/images/basic-bg2.png');
     background-size: cover;
@@ -123,7 +140,7 @@ body {
     grid-template-rows: 100%;
 }
 
-#main-characters-center {
+#main-characters-center-bottom {
     display: flex;
     flex-direction: column;
     grid-area: 1 / 2 / span 1 / span 1;
