--- a/views/game/instructions.ejs
+++ b/views/game/instructions.ejs
@@ -94,8 +94,8 @@
                 <div class="media">
                     <img class="align-self-start mr-3" src="/images/sheryl-face.png" alt="Generic placeholder image">
                     <div class="media-body">
-                        <h5 class="mt-0">Sheryl</h5>
-                        <p>Head-strong, courageous, and quick to anger, Sheryl, too, is in her final year at the Hero's Academy. A roaming band of monsters killed her parents at a young age. She vowed that no one else should have to endure the pain she did, prompting Sheryl to seek training under famed Hero, Master.</p>
+                        <h3 class="mt-0"><b>Sheryl</b></h3>
+                        <p>Head-strong, courageous, and quick to anger, Sheryl, too, is in her final year at the Hero's Academy. A roaming band of monsters killed her parents at a young age. She vowed that no one else should have to endure the pain she did, prompting Sheryl to seek training under famed Hero, Master. While not adapt at spell casting, Sheryl's raw power and battle-rage techniques more than make up for her lack of affinity with the spiritual realm.</p>
                         <ul>
                             <li>Class: Warrior</li>
                             <li>Weapon Type: Broad Swords</li>
@@ -109,7 +109,7 @@
                 <div class="media">
                     <img class="align-self-start mr-3" src="/images/jager-face.png" alt="Generic placeholder image">
                     <div class="media-body">
-                        <h5 class="mt-0">Jager</h5>
+                        <h3 class="mt-0"><b>Jager</b></h3>
                         <p>(place holder description 1)</p>
                         <ul>
                             <li>Class: Priest</li>
@@ -124,7 +124,7 @@
                 <div class="media">
                     <img class="align-self-start mr-3" src="/images/gale-face.png" alt="Generic placeholder image">
                     <div class="media-body">
-                        <h5 class="mt-0">Gale</h5>
+                        <h3 class="mt-0"><b>Gale</b></h3>
                         <p>(place holder description 1)</p>
                         <ul>
                             <li>Class: Mage</li>
@@ -134,12 +134,15 @@
                         </ul>
                     </div>
                 </div>
-                <br><br><br>
+            </div>
+        </div>
 
-                <div class="media">
+        <div id="main-characters-bottom">
+            <div id="main-characters-center-bottom">
+                <div class="media pt-3">
                     <img class="align-self-start mr-3" src="/images/janna-face.png" alt="Generic placeholder image">
                     <div class="media-body">
-                        <h5 class="mt-0">Janna</h5>
+                        <h3 class="mt-0"><b>Janna</b></h3>
                         <p>(place holder description 1)</p>
                         <ul>
                             <li>Occupation: Homemaker</li>
@@ -150,11 +153,11 @@
                     </div>
                 </div>
                 <br><br><br>
-
+                
                 <div class="media">
                     <img class="align-self-start mr-3" src="/images/megan-face.png" alt="Generic placeholder image">
                     <div class="media-body">
-                        <h5 class="mt-0">Megan</h5>
+                        <h3 class="mt-0"><b>Megan</b></h3>
                         <p>(place holder description 1)</p>
                         <ul>
                             <li>Occupation: None</li>
@@ -165,11 +168,11 @@
                     </div>
                 </div>
                 <br><br><br>
-
+                
                 <div class="media">
                     <img class="align-self-start mr-3" src="/images/master-face.png" alt="Generic placeholder image">
                     <div class="media-body">
-                        <h5 class="mt-0">Master</h5>
+                        <h3 class="mt-0"><b>Master</b></h3>
                         <p>(place holder description 1)</p>
                         <ul>
                             <li>Occupation: Head Instructor at the Swiftfell Hero's Academy</li>
@@ -180,22 +183,21 @@
                     </div>
                 </div>
                 <br><br><br>
-
+                
                 <div class="media">
                     <img class="align-self-start mr-3" src="/images/soren-face.png" alt="Generic placeholder image">
                     <div class="media-body">
-                        <h5 class="mt-0">Soren</h5>
+                        <h3 class="mt-0"><b>Soren</b></h3>
                         <p>(place holder description 1)</p>
                         <ul>
                             <li>Occupation: ???</li>
                             <li>Hobbies: ???</li>
                             <li>Noted For: ???</li>
-                            <li>"Power is the only universal constant."</li>
+                            <li>"Power is the only constant in this world."</li>
                         </ul>
                     </div>
                 </div>
                 <br><br><br>
-
             </div>
         </div>
     </div>
