added bio content for Jager on instructions page

--- a/views/game/instructions.ejs
+++ b/views/game/instructions.ejs
@@ -110,7 +110,7 @@
                     <img class="align-self-start mr-3" src="/images/jager-face.png" alt="Generic placeholder image">
                     <div class="media-body">
                         <h3 class="mt-0"><b>Jager</b></h3>
-                        <p>(place holder description 1)</p>
+                        <p>Reserved, driven, and stoic, Jager serves as the head Monk at the Marfia Monastery. Plauged by a long-standing feeling of disconnect with other people, Jager moved to Marfia one year ago after failing his Hero's Exam. He was understandably devastated after his short comings, but has always had a connection to nature and its creatures, which he finds comfort when feeling down.</p>
                         <ul>
                             <li>Class: Priest</li>
                             <li>Weapon Type: Crossbows</li>
