added content for Gale and Janna on instructions page

--- a/views/game/instructions.ejs
+++ b/views/game/instructions.ejs
@@ -114,8 +114,8 @@
                         <ul>
                             <li>Class: Priest</li>
                             <li>Weapon Type: Crossbows</li>
-                            <li>Magic: Healing-based</li>
-                            <li>Special: Status-based</li>
+                            <li>Magic: Status-based</li>
+                            <li>Special: Chaos-based</li>
                         </ul>
                     </div>
                 </div>
@@ -125,12 +125,12 @@
                     <img class="align-self-start mr-3" src="/images/gale-face.png" alt="Generic placeholder image">
                     <div class="media-body">
                         <h3 class="mt-0"><b>Gale</b></h3>
-                        <p>(place holder description 1)</p>
+                        <p>Cheerful, helpful, and a bit too naive for her own good, Gale lives at the Marfia Monastery with her twin brother, Jager. Like her brother, Gale failed her Hero's Exam one year ago and decided to move on with her life beyond training to become   Hero. She now utilizes her skills in the healing arts, which were cultivated at the Hero's Academy, to aid the people of her new home.</p>
                         <ul>
                             <li>Class: Mage</li>
                             <li>Weapon Type: Canes</li>
-                            <li>Magic: Elemental-based</li>
-                            <li>Special: Chaos-based</li>
+                            <li>Magic: Element-based</li>
+                            <li>Special: Healing-based</li>
                         </ul>
                     </div>
                 </div>
@@ -143,7 +143,7 @@
                     <img class="align-self-start mr-3" src="/images/janna-face.png" alt="Generic placeholder image">
                     <div class="media-body">
                         <h3 class="mt-0"><b>Janna</b></h3>
-                        <p>(place holder description 1)</p>
+                        <p>Caring, supportive, and quick-witted, Janna has been raising her children Brindle and Megan on her own since the passing of her late husband, Agin. In the quite moments late into the night, she'll often times feel the pains of sadness at her loss, but they quickly pass as she spends her time perfecting the next best  recipe. At times, she wishes Brindle would find a different path than that of Hero training, but she is too proud of him to pay it any mind.</p>
                         <ul>
                             <li>Occupation: Homemaker</li>
                             <li>Hobbies: Knitting and gardening</li>
