added content for Megan on instructions page

--- a/views/game/instructions.ejs
+++ b/views/game/instructions.ejs
@@ -158,12 +158,12 @@
                     <img class="align-self-start mr-3" src="/images/megan-face.png" alt="Generic placeholder image">
                     <div class="media-body">
                         <h3 class="mt-0"><b>Megan</b></h3>
-                        <p>(place holder description 1)</p>
+                        <p>Bright-eyed, pleasant, and good-hearted, Megan plays the typically "little sister" to Brindle. Always wanting to tag along, but never quite big enough, Megan supports the students at the Hero's Academy with baked treats made in tandem with Janna. Her love for animals leads her to care for sick and injured live stock and woodland creates found in, and around, Swiftfell Village.</p>
                         <ul>
                             <li>Occupation: None</li>
                             <li>Hobbies: Aiding injured farm animals and pets</li>
-                            <li>Noted For: </li>
-                            <li>""</li>
+                            <li>Noted For: Acting as a "big sister" to all the small children of Swiftfell Village</li>
+                            <li>"Just leave it to me!"</li>
                         </ul>
                     </div>
                 </div>
