added content for Master on instructions page

--- a/views/game/instructions.ejs
+++ b/views/game/instructions.ejs
@@ -173,7 +173,7 @@
                     <img class="align-self-start mr-3" src="/images/master-face.png" alt="Generic placeholder image">
                     <div class="media-body">
                         <h3 class="mt-0"><b>Master</b></h3>
-                        <p>(place holder description 1)</p>
+                        <p>Battle-hardened, salty, and wise, Master resides as the head instructor at the Hero's Academy in Swiftfell Village. Master has carried the title of Hero for many years, slaying countless monsters and upholding the sacred oath of protecting the Aeon Crystal. Only spoken in whispered rumors, Master is said to blame himself for Agin's death, resulting in his resignation, and subsequent appointment, at the Hero Academy.</p>
                         <ul>
                             <li>Occupation: Head Instructor at the Swiftfell Hero's Academy</li>
                             <li>Hobbies: Maintaining the documentation of the history of Swiftfell and local historian</li>
