added content for Soren on instructions page

--- a/views/game/instructions.ejs
+++ b/views/game/instructions.ejs
@@ -84,7 +84,7 @@
                         <ul>
                             <li>Class: Hero</li>
                             <li>Weapon Type: Short Swords</li>
-                            <li>Magic: Lightning-based</li>
+                            <li>Magic: Support-based</li>
                             <li>Special: Ki-based</li>
                         </ul>
                     </div>
@@ -188,7 +188,7 @@
                     <img class="align-self-start mr-3" src="/images/soren-face.png" alt="Generic placeholder image">
                     <div class="media-body">
                         <h3 class="mt-0"><b>Soren</b></h3>
-                        <p>(place holder description 1)</p>
+                        <p>??????</p>
                         <ul>
                             <li>Occupation: ???</li>
                             <li>Hobbies: ???</li>
