--- a/public/stylesheets/instructions.css
+++ b/public/stylesheets/instructions.css
@@ -2,6 +2,7 @@ body {
     font-family: 'Courgette', cursive;
     background-image: linear-gradient(to right, #00705e, rgb(1, 175, 175));
     color: black;
+    width: 100vw;
 }
 
 .bg-image {
@@ -145,4 +146,38 @@ body {
     flex-direction: column;
     grid-area: 1 / 2 / span 1 / span 1;
     align-items: center;
+}
+
+
+
+@media (max-width: 700px) {
+    #title-img img {
+        width: 70%;
+    }
+
+    #intro-text {
+        font-size: 1em;
+    }
+
+    #swiftfell-lore {
+        background-position: center;
+        height: 60vh;
+        grid-template-columns: 100%;
+        grid-template-rows: 70% 30%;
+    }
+
+    #swiftfell-lore-left {
+        grid-area: 1 / 1 / span 1 / span 1;
+        
+    }
+
+    #swiftfell-lore-left h1 {
+        font-size: 1.5em;
+    }
+
+    #swiftfell-lore-right {
+        grid-area: 2 / 1 / span 1 / span 1;
+        background-size: 20%;
+        background-position: center;
+    }
 }
