--- a/views/game/instructions.ejs
+++ b/views/game/instructions.ejs
@@ -21,7 +21,11 @@
             <div id="swiftfell-lore-left">
                 <h1 class="mt-5 text-shadowing"><u>Welcome to Swiftfell</u></h1>
                 <br>
-                <p>(place holder test)</p>
+                <p>An unassuming, humble farming town, Swiftfell Village lies nestled among the southern foothills of the Sundirra Realm. Most who reside within the walls of Swiftfell spend their day cultivating the land and selling their crops to merchant caravans passing through towards the capital. At first glance, the quaint hamlet appears as unremarkable as one would assume. However, Swiftfell has been home of the fabled Hero's Academy for hundreds of years. Here, would-be champions of peace are separated from those simply filled with delusions of grandeur.</p>
+                <br>
+                <p>The establishment of the Hero's Academy in such a unremarkable location is no happenstance. Swiftfell is also home to the Aeon Crystal. A mysterious element, whose origin remain unclear to this day, emits an ethereal energy, seeming to repel creatures consumed by dark energy. For generations, the Hero's of Swiftfell have sworn a sacred oath to protect the Aeon Crystal for the good of mankind.</p>
+                <br>
+                <p>As the world grows larger, so have the forces of evil. As a result, Swiftfell Heroes often find themselves sought after by neighboring town governance, and at times by order of the High Crown, to aid is dispelling troops of monsters that plague the realm. This has lead those who seek fortune to apply for admittance into the Hero's Academy. Growing concern over the traditions of the past being forgotten, rigorous standards must be met in order to graduate from the Academy.</p>
             </div>
             <div id="swiftfell-lore-right">
                 <!-- Intentionally blank for background image -->
