--- a/views/game/instructions.ejs
+++ b/views/game/instructions.ejs
@@ -76,14 +76,14 @@
         </div>
 
         <div id="main-characters">
-            <div id="main-characters-center">
+            <div id="main-characters-center1">
                 <h1 class="mt-5 text-shadowing"><u>Main Characters</u></h1>
                 <br><br>
                 
                 <div class="media">
                     <img class="align-self-start mr-3" src="/images/hero-face.png" alt="Generic placeholder image">
                     <div class="media-body">
-                        <h3 class="mt-0"><b>Brindle</b></h3>
+                        <h3 class="mt-0 char-name"><b>Brindle</b></h3>
                         <p>Ambitious, brave, and a bit forgetful, Brindle has spent most of his life preparing to earn the title of Hero from the Swiftfell Hero's Academy. He is in his last year and is preparing to take the Hero's Exam any day now. Son of the legendary Hero, Agin, enjoys slaying monsters and the idea of adventuring across the world more than protecting the people of Sundirra Realm.</p>
                         <ul>
                             <li>Class: Hero</li>
@@ -98,7 +98,7 @@
                 <div class="media">
                     <img class="align-self-start mr-3" src="/images/sheryl-face.png" alt="Generic placeholder image">
                     <div class="media-body">
-                        <h3 class="mt-0"><b>Sheryl</b></h3>
+                        <h3 class="mt-0 char-name"><b>Sheryl</b></h3>
                         <p>Head-strong, courageous, and quick to anger, Sheryl, too, is in her final year at the Hero's Academy. A roaming band of monsters killed her parents at a young age. She vowed that no one else should have to endure the pain she did, prompting Sheryl to seek training under famed Hero, Master. While not adapt at spell casting, Sheryl's raw power and battle-rage techniques more than make up for her lack of affinity with the spiritual realm.</p>
                         <ul>
                             <li>Class: Warrior</li>
@@ -109,11 +109,12 @@
                     </div>
                 </div>
                 <br><br>
-
+            </div>
+            <div id="main-characters-center2">
                 <div class="media">
                     <img class="align-self-start mr-3" src="/images/jager-face.png" alt="Generic placeholder image">
                     <div class="media-body">
-                        <h3 class="mt-0"><b>Jager</b></h3>
+                        <h3 class="mt-0 char-name"><b>Jager</b></h3>
                         <p>Reserved, driven, and stoic, Jager serves as the head Monk at the Marfia Monastery. Plauged by a long-standing feeling of disconnect with other people, Jager moved to Marfia one year ago after failing his Hero's Exam. He was understandably devastated after his short comings, but has always had a connection to nature and its creatures, which he finds comfort when feeling down.</p>
                         <ul>
                             <li>Class: Priest</li>
@@ -128,7 +129,7 @@
                 <div class="media">
                     <img class="align-self-start mr-3" src="/images/gale-face.png" alt="Generic placeholder image">
                     <div class="media-body">
-                        <h3 class="mt-0"><b>Gale</b></h3>
+                        <h3 class="mt-0 char-name"><b>Gale</b></h3>
                         <p>Cheerful, helpful, and a bit too naive for her own good, Gale lives at the Marfia Monastery with her twin brother, Jager. Like her brother, Gale failed her Hero's Exam one year ago and decided to move on with her life beyond training to become   Hero. She now utilizes her skills in the healing arts, which were cultivated at the Hero's Academy, to aid the people of her new home.</p>
                         <ul>
                             <li>Class: Mage</li>
@@ -139,14 +140,11 @@
                     </div>
                 </div>
             </div>
-        </div>
-
-        <div id="main-characters-bottom">
-            <div id="main-characters-center-bottom">
+            <div id="main-characters-center3">
                 <div class="media pt-3">
                     <img class="align-self-start mr-3" src="/images/janna-face.png" alt="Generic placeholder image">
                     <div class="media-body">
-                        <h3 class="mt-0"><b>Janna</b></h3>
+                        <h3 class="mt-0 char-name"><b>Janna</b></h3>
                         <p>Caring, supportive, and quick-witted, Janna has been raising her children Brindle and Megan on her own since the passing of her late husband, Agin. In the quite moments late into the night, she'll often times feel the pains of sadness at her loss, but they quickly pass as she spends her time perfecting the next best  recipe. At times, she wishes Brindle would find a different path than that of Hero training, but she is too proud of him to pay it any mind.</p>
                         <ul>
                             <li>Occupation: Homemaker</li>
@@ -161,7 +159,7 @@
                 <div class="media">
                     <img class="align-self-start mr-3" src="/images/megan-face.png" alt="Generic placeholder image">
                     <div class="media-body">
-                        <h3 class="mt-0"><b>Megan</b></h3>
+                        <h3 class="mt-0 char-name"><b>Megan</b></h3>
                         <p>Bright-eyed, pleasant, and good-hearted, Megan plays the typically "little sister" to Brindle. Always wanting to tag along, but never quite big enough, Megan supports the students at the Hero's Academy with baked treats made in tandem with Janna. Her love for animals leads her to care for sick and injured live stock and woodland creates found in, and around, Swiftfell Village.</p>
                         <ul>
                             <li>Occupation: None</li>
@@ -172,11 +170,12 @@
                     </div>
                 </div>
                 <br><br>
-                
+            </div>
+            <div id="main-characters-center4">
                 <div class="media">
                     <img class="align-self-start mr-3" src="/images/master-face.png" alt="Generic placeholder image">
                     <div class="media-body">
-                        <h3 class="mt-0"><b>Master</b></h3>
+                        <h3 class="mt-0 char-name"><b>Master</b></h3>
                         <p>Battle-hardened, salty, and wise, Master resides as the head instructor at the Hero's Academy in Swiftfell Village. Master has carried the title of Hero for many years, slaying countless monsters and upholding the sacred oath of protecting the Aeon Crystal. Only spoken in whispered rumors, Master is said to blame himself for Agin's death, resulting in his resignation, and subsequent appointment, at the Hero Academy.</p>
                         <ul>
                             <li>Occupation: Head Instructor at the Swiftfell Hero's Academy</li>
@@ -191,7 +190,7 @@
                 <div class="media">
                     <img class="align-self-start mr-3" src="/images/soren-face.png" alt="Generic placeholder image">
                     <div class="media-body">
-                        <h3 class="mt-0"><b>Soren</b></h3>
+                        <h3 class="mt-0 char-name"><b>Soren</b></h3>
                         <p>??????</p>
                         <ul>
                             <li>Occupation: ???</li>
