refactored layout of instruction page (desktop layout) for a much cleaner look.

--- a/views/game/instructions.ejs
+++ b/views/game/instructions.ejs
@@ -17,7 +17,7 @@
             </div>
         </div>
 
-        <div id="swiftfell-lore" class="bg-image">
+        <div id="swiftfell-lore">
             <div id="swiftfell-lore-left">
                 <h1 class="mt-5 text-shadowing"><u>Welcome to Swiftfell</u></h1>
                 <br>
@@ -32,7 +32,7 @@
             </div>
         </div>
 
-        <div id="basic-controls" class="bg-image">
+        <div id="basic-controls">
             <div id="basic-controls-left">
                 <!-- Intentionally blank for background image -->
             </div>
@@ -52,7 +52,7 @@
             </div>
         </div>
 
-        <div id="combat-basics" class="bg-image">
+        <div id="combat-basics">
             <div id="combat-basics-left">
                 <h1 class="mt-5 text-shadowing"><u>Combat Basics</u></h1>
                 <br>
