--- a/public/stylesheets/instructions.css
+++ b/public/stylesheets/instructions.css
@@ -5,13 +5,6 @@ body {
     width: 100vw;
 }
 
-.bg-image {
-    background-image: url('/images/basic-bg2.png');
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-}
-
 .text-shadowing {
     text-shadow: 2px 2px rgb(146, 146, 146);
 }
@@ -38,8 +31,10 @@ body {
     display: grid;
     grid-template-columns: 60% 40%;
     grid-template-rows: 100%;
-    height: 100vh;
-    background-position-y: center;
+    height: 150vh;
+    background-image: url('/images/basic-bg2.png');
+    background-size: cover;
+    background-position: bottom;
 }
 
 #swiftfell-lore-left {
@@ -61,7 +56,7 @@ body {
     background-size: 75%;
     background-repeat: no-repeat;
     background-position-x: 8%;
-    background-position-y: 50%;
+    background-position-y: 32%;
 }
 
 #basic-controls {
@@ -69,6 +64,10 @@ body {
     grid-template-columns: 33.3% 66.6%;
     grid-template-rows: 100%;
     height: 105vh;
+    background-image: url('/images/basic-bg2.png');
+    background-size: cover;
+    background-position: top;
+    padding-top: 5vh;
 }
 
 #basic-controls-left {
@@ -97,7 +96,10 @@ body {
     display: grid;
     grid-template-columns: 66.6% 33.3%;
     grid-template-rows: 100%;
-    height: 145vh;
+    height: 185vh;
+    background-image: url('/images/basic-bg2.png');
+    background-size: cover;
+    background-position: bottom;
 }
 
 #combat-basics-left {
@@ -119,11 +121,11 @@ body {
     background-size: 80%;
     background-repeat: no-repeat;
     background-position: center;
+    background-position-y: 35%;
 }
 
 #main-characters {
     display: grid;
-    height: 390vh;
     grid-template-columns: 20% 60% 20%;
     grid-template-rows: 30% 23.3% 23.3% 23.3%
 }
@@ -131,13 +133,15 @@ body {
 #main-characters-center1 {
     display: flex;
     flex-direction: column;
+    /* height: 100vh; */
     grid-area: 1 / 1 / span 1 / span 3;
     align-items: center;
     background-image: url('/images/basic-bg2.png');
-    background-position: center;
+    background-position: top;
     background-size: cover;
     padding-left: 20vw;
     padding-right: 20vw;
+    padding-top: 5vh;
 }
 
 #main-characters-center2 {
@@ -229,7 +233,7 @@ body {
     }
 
     #combat-basics {
-        height: 85vh;
+        height: 100vh;
         background-image: none;
         grid-template-columns: 100%;
         grid-template-rows: 50% 50%;
@@ -253,7 +257,7 @@ body {
         z-index: -1;
         background-image: url('/images/basic-bg2.png');
         background-size: cover;
-        background-position: center;
+        background-position: bottom;
     }
 
     #combat-basics-right img {
@@ -262,5 +266,48 @@ body {
 
     .char-name {
         font-size: 1.3em;
+    }
+
+    #main-characters {
+        font-size: 0.7em;
+        height: 500vh;
+
+    }
+
+    #main-characters h1 {
+        font-size: 1.5em;
+    }
+
+    #main-characters img {
+        height: 56px;
+        width: 56px;
+    }
+
+    #main-characters-center1 {
+        padding: 0 5vw 0 5vw;
+        background-position: top;
+        background-size: contain;
+        background-repeat: no-repeat;
+    }
+
+    #main-characters-center2 {
+        padding: 0 5vw 0 5vw;
+        background-position: top;
+        background-size: contain;
+        background-repeat: no-repeat;
+    }
+
+    #main-characters-center3 {
+        padding: 0 5vw 0 5vw;
+        background-position: top;
+        background-size: contain;
+        background-repeat: no-repeat;
+    }
+
+    #main-characters-center4 {
+        padding: 0 5vw 0 5vw;
+        background-position: top;
+        background-size: contain;
+        background-repeat: no-repeat;
     }
 }
