--- a/public/stylesheets/instructions.css
+++ b/public/stylesheets/instructions.css
@@ -63,7 +63,6 @@ body {
     display: grid;
     grid-template-columns: 33.3% 66.6%;
     grid-template-rows: 100%;
-    height: 105vh;
     background-image: url('/images/basic-bg2.png');
     background-size: cover;
     background-position: top;
@@ -127,13 +126,12 @@ body {
 #main-characters {
     display: grid;
     grid-template-columns: 20% 60% 20%;
-    grid-template-rows: 30% 23.3% 23.3% 23.3%
+    /* grid-template-rows: repeat(4, 4fr); */
 }
 
 #main-characters-center1 {
     display: flex;
     flex-direction: column;
-    /* height: 100vh; */
     grid-area: 1 / 1 / span 1 / span 3;
     align-items: center;
     background-image: url('/images/basic-bg2.png');
@@ -270,7 +268,7 @@ body {
 
     #main-characters {
         font-size: 0.7em;
-        height: 500vh;
+        /* height: 500vh; */
 
     }
 
@@ -285,29 +283,35 @@ body {
 
     #main-characters-center1 {
         padding: 0 5vw 0 5vw;
+        height: 85vh;
         background-position: top;
-        background-size: contain;
+        background-size: cover;
         background-repeat: no-repeat;
     }
 
     #main-characters-center2 {
         padding: 0 5vw 0 5vw;
-        background-position: top;
-        background-size: contain;
+        height: 95vh;
+        background-position: bottom;
+        background-size: cover;
         background-repeat: no-repeat;
+        padding-top: 10vh;
     }
 
     #main-characters-center3 {
         padding: 0 5vw 0 5vw;
+        height: 85vh;
         background-position: top;
-        background-size: contain;
+        background-size: cover;
         background-repeat: no-repeat;
+        padding-top: 10vh;
     }
 
     #main-characters-center4 {
         padding: 0 5vw 0 5vw;
-        background-position: top;
-        background-size: contain;
+        background-position: bottom;
+        background-size: cover;
         background-repeat: no-repeat;
+        padding-top: 6vh;
     }
 }
