--- a/public/stylesheets/instructions.css
+++ b/public/stylesheets/instructions.css
@@ -192,9 +192,14 @@ body {
         font-size: 1em;
     }
 
+    #main-sec1 {
+        background-position: initial;
+    }
+
     #swiftfell-lore {
-        background-position: center;
-        height: 74vh;
+        /* background-position: center; */
+        height: 90vh;
+        width: 100vw;
         grid-template-columns: 100%;
         grid-template-rows: 70% 30%;
     }
@@ -217,13 +222,26 @@ body {
     }
 
     #basic-controls {
-        height: 70vh;
+        background-size: cover;
+        padding-top: 0;
+        background-repeat: no-repeat;
+        grid-template-columns: 100%;
+    }
+
+    #basic-controls-left {
+        grid-area: 1 / 1 / span 1 / span 1;
+        background-position-x: 50%;
+        background-position-y: 50%;
+        opacity: 0.3;
+        background-size: 50%;
     }
 
     #basic-controls-right {
         font-size: 0.7em;
         padding-left: 1vw;
-
+        grid-area: 1 / 1 / span 1 / span 1;
+        padding-left: 9vw;
+        height: 80vh;
     }
     
     #basic-controls-right h1 {
@@ -231,18 +249,13 @@ body {
     }
 
     #combat-basics {
-        height: 100vh;
-        background-image: none;
+        height: 120vh;
         grid-template-columns: 100%;
-        grid-template-rows: 50% 50%;
     }
 
     #combat-basics-left {
         font-size: 0.7em;
         grid-area: 1 / 1 / span 1 / span 1;
-        background-image: url('/images/basic-bg2.png');
-        background-position: center;
-        background-size: cover;
         padding-right: 8vw;
     }
 
@@ -251,11 +264,10 @@ body {
     }
 
     #combat-basics-right {
-        grid-area: 2 / 1 / span 1 / span 1;
-        z-index: -1;
-        background-image: url('/images/basic-bg2.png');
-        background-size: cover;
-        background-position: bottom;
+        grid-area: 1 / 1 / span 1 / span 1;
+        background-size: 70%;
+        opacity: 0.4;
+        background-position: center;
     }
 
     #combat-basics-right img {
@@ -268,12 +280,12 @@ body {
 
     #main-characters {
         font-size: 0.7em;
-        /* height: 500vh; */
 
     }
 
     #main-characters h1 {
         font-size: 1.5em;
+        margin-bottom: 0;
     }
 
     #main-characters img {
@@ -283,7 +295,7 @@ body {
 
     #main-characters-center1 {
         padding: 0 5vw 0 5vw;
-        height: 85vh;
+        height: 100vh;
         background-position: top;
         background-size: cover;
         background-repeat: no-repeat;
@@ -300,7 +312,7 @@ body {
 
     #main-characters-center3 {
         padding: 0 5vw 0 5vw;
-        height: 85vh;
+        height: 110vh;
         background-position: top;
         background-size: cover;
         background-repeat: no-repeat;
