--- a/views/game/main.ejs
+++ b/views/game/main.ejs
@@ -21,7 +21,7 @@
                 <img src="/images/party-group.jpg" width="75%">
             </div>
             <div id="main-right">
-                <img src="/images/game-menu-text.png">
+                <img id="game-menu-text" src="/images/game-menu-text.png">
                 <br>
                 <br>
                 <a href="/game/instructions">Read game play instructions</a>
