--- a/views/game/main.ejs
+++ b/views/game/main.ejs
@@ -31,7 +31,7 @@
                 <a href="/user/profile">Edit profile</a>
                 <br>
                 <br>
-                <button onclick="launchGame()" class="btn btn-primary btn-lg">LAUNCH GAME</button>
+                <button id="launch-btn" onclick="launchGame()" class="btn btn-primary btn-lg">LAUNCH GAME</button>
             </div>
         </div>
     </div>
