--- a/public/stylesheets/style-title.css
+++ b/public/stylesheets/style-title.css
@@ -1,30 +1,32 @@
 body {
+  
+}
+
+#app {
+  display: grid;
+  grid-template-rows: 10% 80% 10%;
+  grid-template-columns: 20% 60% 20%;
+  height: 100vh;
+  width: 100vw;
   background-image: url('/images/title-bg.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  width: 100vw;
 }
 
 #main-img-area {
+  display: grid;
+  grid-area: 2 / 2 / span 1 / span 1;
+  align-items: center;
+  justify-content: center;
   animation: fadein 4s;
+}
+
+img {
+  cursor: pointer;
 }
 
 @keyframes fadein {
     from { opacity: 0; }
     to   { opacity: 1; }
-}
-
-@media (max-width: 700px) {
-  #main-img-area img {
-    width: 80%;
-    height: 80%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-
-  a {
-    padding-left: 20%;
-  }
 }
